--- a/index.html
+++ b/index.html
@@ -1,45 +1,98 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta http-equiv="X-Frame-Options" content="DENY" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Owethu Mbuli | Personal Barber</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Segoe UI', sans-serif; background-color: #f5f5f5; color: #333; line-height: 1.6; }
-    header { background: #1e1e2f; color: white; padding: 20px; }
-    .nav-wrapper {
+    html { scroll-behavior: smooth; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f5f5f5;
+      color: #333;
+      line-height: 1.6;
+      overflow-x: hidden;
+    }
+    header {
+      background: rgba(30, 30, 47, 1);
+      color: white;
+      padding: 20px;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+      transition: background 0.4s ease;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
     }
+    header.scrolled { background: rgba(30, 30, 47, 0.85); }
     .menu-toggle {
-      font-size: 24px;
+      position: fixed;
+      top: 25px;
+      right: 20px;
+      font-size: 28px;
+      background: none;
+      border: none;
+      color: black;
       cursor: pointer;
+      z-index: 2000;
+      font-weight: bold;
+      transition: color 0.3s ease;
     }
+    .menu-toggle.open { color: white; }
     #dropdown-menu {
-      display: none;
-      flex-direction: column;
+      position: fixed;
+      top: 0;
+      right: -250px;
+      height: 100%;
+      width: 250px;
       background: #1e1e2f;
-      padding: 10px 0;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      padding-top: 80px;
+      transition: right 0.3s ease;
+      z-index: 1000;
     }
+    #dropdown-menu.active { right: 0; }
     #dropdown-menu a {
       color: white;
-      padding: 10px 20px;
+      padding: 15px 25px;
       text-decoration: none;
-      border-top: 1px solid #333;
+      width: 100%;
+      border-bottom: 1px solid #333;
     }
-    #dropdown-menu a:hover {
-      background: #333;
+    #dropdown-menu a:hover { background: #333; }
+    .drawer-contact-buttons {
+      margin-top: auto;
+      width: 100%;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
     }
-
+    .drawer-btn {
+      background: #25d366;
+      color: white;
+      text-align: center;
+      padding: 12px;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+    .drawer-btn.call { background: #3c3c3c; }
+    .drawer-btn:hover { opacity: 0.9; }
     .hero {
       background: url("background.jpg") center center/cover no-repeat;
       color: white;
       padding: 80px 20px 40px;
       text-align: center;
       position: relative;
+      margin-top: 90px;
     }
     .hero::before {
       content: "";
@@ -53,29 +106,63 @@
     .hero * { position: relative; z-index: 2; }
     .hero h1 { font-size: 2.2em; margin-bottom: 10px; }
     .hero p { font-size: 1.2em; }
-    .section { padding: 40px 20px; max-width: 800px; margin: auto; }
-    .btn { display: inline-block; background: #8e2de2; color: white; padding: 12px 24px; border-radius: 6px; text-decoration: none; margin-top: 20px; }
-    footer { background: #1e1e2f; color: white; text-align: center; padding: 20px; font-size: 0.9em; }
+    section {
+      padding: 40px 20px;
+      max-width: 800px;
+      margin: auto;
+      text-align: center;
+    }
+    section h2 { font-size: 1.8em; margin-bottom: 10px; }
+    .product-coming-soon {
+      background: url('product-coming.jpg') center center/cover no-repeat;
+      height: 300px;
+      position: relative;
+      border-radius: 10px;
+      margin-top: 40px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    }
+    .product-coming-soon .overlay {
+      background: rgba(0, 0, 0, 0.5);
+      color: #fff;
+      height: 100%;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+    }
+    .product-coming-soon h2 { font-size: 1.8em; margin-bottom: 10px; }
+    .product-coming-soon p { font-size: 0.9em; opacity: 0.8; }
+    footer {
+      background: #1e1e2f;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9em;
+    }
     @media (max-width: 600px) {
       .hero h1 { font-size: 1.6em; }
-      nav a { display: block; margin: 10px 0; }
     }
   </style>
 </head>
 <body>
-  <header>
-    <div class="nav-wrapper">
-      <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-      <h1>Owethu Mbuli</h1>
-    </div>
-    <nav id="dropdown-menu">
-      <a href="#about">About</a>
-      <a href="booking.html">Book Now</a>
-      <a href="#contact">Contact</a>
-      <a href="gallery.html">View Our Work of Art</a>
-      <a href="privacy.html">Privacy Policy</a>
-    </nav>
+  <header id="header">
+    <button class="menu-toggle" id="menuToggle" onclick="toggleMenu()">☰</button>
+    <h1>Owethu Mbuli</h1>
   </header>
+
+  <nav id="dropdown-menu">
+    <a href="#about" onclick="toggleMenu()">About</a>
+    <a href="booking.html" onclick="toggleMenu()">Book Now</a>
+    <a href="#contact" onclick="toggleMenu()">Contact</a>
+    <a href="gallery.html" onclick="toggleMenu()">View Our Work</a>
+    <a href="advertising.html" onclick="toggleMenu()">Advertising</a>
+    <div class="drawer-contact-buttons">
+      <a href="https://wa.me/27635892769" class="drawer-btn whatsapp" target="_blank">💬 WhatsApp</a>
+      <a href="tel:+27635892769" class="drawer-btn call">📞 Call</a>
+    </div>
+  </nav>
 
   <section class="hero" id="home">
     <h1>Personal Barber & House Call Specialist</h1>
@@ -86,6 +173,22 @@
     <h2>About Me</h2>
     <p>I'm Owethu Mbuli, a personal barber offering professional house call grooming services in Gauteng — especially Soweto, Roodepoort, and nearby areas. Whether it’s a fresh fade or a classic clean-up, I come to you.</p>
     <p><strong>Available:</strong> Monday, Tuesday, Wednesday</p>
+  </section>
+
+  <section class="section product-coming-soon">
+    <div class="overlay">
+      <h2>🛍️ Products</h2>
+      <p>Coming Soon</p>
+    </div>
+  </section>
+
+  <section class="section" id="ads">
+    <h2>Look Out For</h2>
+    <img src="billboard.jpg" alt="Advertising Billboard" style="max-width:100%; height:auto; border-radius:10px; margin:20px 0;">
+    <p>We’ll soon be featuring sponsored products and promotions from brands we trust. Watch this space!</p>
+    <p>If you'd like your product featured here, 
+      <a href="advertising.html" style="color:#8e2de2; font-weight:bold;">click here to advertise</a>.
+    </p>
   </section>
 
   <section class="section" id="contact">
@@ -100,9 +203,24 @@
 
   <script>
     function toggleMenu() {
-      var menu = document.getElementById("dropdown-menu");
-      menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
+      const menu = document.getElementById("dropdown-menu");
+      const toggle = document.getElementById("menuToggle");
+      const isOpen = menu.classList.toggle("active");
+      toggle.textContent = isOpen ? "<" : "☰";
+      toggle.classList.toggle("open", isOpen);
     }
+
+    document.addEventListener("click", function (event) {
+      const menu = document.getElementById("dropdown-menu");
+      const toggle = document.getElementById("menuToggle");
+      if (!menu.contains(event.target) && !toggle.contains(event.target)) {
+        if (menu.classList.contains("active")) {
+          menu.classList.remove("active");
+          toggle.textContent = "☰";
+          toggle.classList.remove("open");
+        }
+      }
+    });
   </script>
 </body>
 </html>
