--- a/index.html
+++ b/index.html
@@ -222,5 +222,169 @@
       }
     });
   </script>
+
+<!-- Privacy Notice Popup -->
+<div id="privacy-popup">
+  <p>We value your privacy and use your information only to provide better service. By continuing, you accept our Privacy Policy.</p>
+  <a href="privacy.html" id="view-policy-link">View Policy</a>
+  <button id="accept-privacy">Accept</button>
+</div>
+
+<style>
+  #privacy-popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.95);
+    background: #1e1e2f;
+    color: white;
+    padding: 20px 30px 50px;
+    box-shadow: 0 4px 16px rgba(0,0,0,0.5);
+    border-radius: 12px;
+    font-size: 0.95em;
+    z-index: 3000;
+    display: none;
+    max-width: 90%;
+    width: 300px;
+    text-align: center;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+    opacity: 0;
+  }
+
+  #privacy-popup.show {
+    display: block;
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  #privacy-popup #view-policy-link {
+    position: absolute;
+    bottom: 10px;
+    right: 15px;
+    font-size: 0.85em;
+    color: #8e2de2;
+    text-decoration: none;
+  }
+
+  #privacy-popup button#accept-privacy {
+    margin-top: 15px;
+    background: none;
+    color: white;
+    border: none;
+    font-weight: bold;
+    font-size: 1em;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+  }
+
+  
+@keyframes bounceIn {
+  0% {
+    opacity: 0;
+    transform: translate(-50%, -40%) scale(0.8);
+  }
+  60% {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1.05);
+  }
+  80% {
+    transform: translate(-50%, -48%) scale(0.98);
+  }
+  100% {
+    transform: translate(-50%, -50%) scale(1);
+  }
+}
+#privacy-popup.show {
+  display: block;
+  animation: bounceIn 0.6s ease forwards;
+}
+
+  #privacy-popup button#accept-privacy:hover {
+    transform: scale(1.2);
+  }
+</style>
+
+<script>
+  function setCookie(name, value, days) {
+    const d = new Date();
+    d.setTime(d.getTime() + (days*24*60*60*1000));
+    const expires = "expires=" + d.toUTCString();
+    document.cookie = name + "=" + value + ";" + expires + ";path=/";
+  }
+
+  function getCookie(name) {
+    const decodedCookie = decodeURIComponent(document.cookie);
+    const ca = decodedCookie.split(';');
+    name = name + "=";
+    for(let i = 0; i < ca.length; i++) {
+      let c = ca[i];
+      while (c.charAt(0) === ' ') c = c.substring(1);
+      if (c.indexOf(name) === 0) return c.substring(name.length, c.length);
+    }
+    return "";
+  }
+
+  window.addEventListener("load", () => {
+    const popup = document.getElementById("privacy-popup");
+    const shown = getCookie("seenPrivacyPopup");
+    if (!shown) {
+      popup.classList.add("show");
+      const closePopup = () => popup.classList.remove("show");
+      setTimeout(closePopup, 5000);
+      document.getElementById("accept-privacy").addEventListener("click", () => {
+        setCookie("seenPrivacyPopup", "true", 4);
+        closePopup();
+      });
+    }
+  });
+</script>
+
+
+<script>
+  function setCookie(name, value, days) {
+    const d = new Date();
+    d.setTime(d.getTime() + (days * 24 * 60 * 60 * 1000));
+    const expires = "expires=" + d.toUTCString();
+    document.cookie = name + "=" + value + ";" + expires + ";path=/";
+  }
+
+  function getCookie(name) {
+    const decodedCookie = decodeURIComponent(document.cookie);
+    const ca = decodedCookie.split(';');
+    name = name + "=";
+    for (let i = 0; i < ca.length; i++) {
+      let c = ca[i];
+      while (c.charAt(0) === ' ') c = c.substring(1);
+      if (c.indexOf(name) === 0) return c.substring(name.length, c.length);
+    }
+    return "";
+  }
+
+  window.addEventListener("load", () => {
+    const popup = document.getElementById("privacy-popup");
+    const shown = getCookie("seenPrivacyPopup");
+
+    if (!shown) {
+      let triggered = false;
+
+      window.addEventListener("scroll", () => {
+        if (!triggered && window.scrollY > 100) {
+          popup.classList.add("show");
+          triggered = true;
+
+          const closePopup = () => popup.classList.remove("show");
+
+          setTimeout(closePopup, 5000);
+
+          document.getElementById("accept-privacy").addEventListener("click", () => {
+            setCookie("seenPrivacyPopup", "true", 4);
+            closePopup();
+          });
+        }
+      });
+    }
+  });
+</script>
+
 </body>
 </html>
