--- a/index.html
+++ b/index.html
@@ -152,18 +152,19 @@
     <h1>Owethu Mbuli</h1>
   </header>
 
-  <nav id="dropdown-menu">
-    <a href="#about" onclick="toggleMenu()">About</a>
-    <a href="booking.html" onclick="toggleMenu()">Book Now</a>
-    <a href="#contact" onclick="toggleMenu()">Contact</a>
-    <a href="gallery.html" onclick="toggleMenu()">View Our Work</a>
-    <a href="advertising.html" onclick="toggleMenu()">Advertising</a>
-    <div class="drawer-contact-buttons">
-      <a href="https://wa.me/27635892769" class="drawer-btn whatsapp" target="_blank">💬 WhatsApp</a>
-      <a href="tel:+27635892769" class="drawer-btn call">📞 Call</a>
-    </div>
-  </nav>
-
+<nav id="dropdown-menu">
+  <h2 style="width: 100%; text-align: center; color: white; padding: 15px 0; border-bottom: 1px solid #444; animation: fadeSlideIn 0.6s ease;">Menu</h2>
+  <a href="#about" onclick="toggleMenu()">About</a>
+  <a href="booking.html" onclick="toggleMenu()">Book Now</a>
+  <a href="#contact" onclick="toggleMenu()">Contact</a>
+  <a href="gallery.html" onclick="toggleMenu()">View Our Work</a>
+  <a href="advertising.html" onclick="toggleMenu()">Advertising</a>
+  <a href="privacy.html" onclick="toggleMenu()" style="color: white; padding: 15px 25px; text-decoration: none; width: 100%; border-bottom: 1px solid #333;">Privacy Policy</a>
+  <div class="drawer-contact-buttons">
+    <a href="https://wa.me/27635892769" class="drawer-btn whatsapp" target="_blank">💬 WhatsApp</a>
+    <a href="tel:+27635892769" class="drawer-btn call">📞 Call</a>
+  </div>
+</nav>
   <section class="hero" id="home">
     <h1>Personal Barber & House Call Specialist</h1>
     <p>Serving Soweto, Roodepoort & surrounding areas.</p>
