--- a/thankyou.html
+++ b/thankyou.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Thank You!</title>
-  <meta http-equiv="refresh" content="3;url=index.html" />
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -24,19 +23,26 @@
     p {
       font-size: 1.2em;
     }
-    .fade {
-      animation: fadeIn 1.5s ease-in-out;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: scale(0.9); }
-      to { opacity: 1; transform: scale(1); }
+    a {
+      color: #8e2de2;
+      text-decoration: none;
+      margin-top: 20px;
+      display: inline-block;
     }
   </style>
+  <script>
+    // Redirect to index.html after 3 seconds
+    setTimeout(function() {
+      window.location.href = "index.html";
+    }, 3000);
+  </script>
 </head>
 <body>
-  <div class="fade">
+  <div>
     <h1>Thank You!</h1>
-    <p>Your booking has been received. Redirecting to home...</p>
+    <p>Your booking has been received. We'll get back to you shortly.</p>
+    <p>Redirecting to home...</p>
+    <a href="index.html">← Click here if not redirected</a>
   </div>
 </body>
 </html>
