--- a/booking.html
+++ b/booking.html
@@ -13,13 +13,11 @@
       padding: 20px;
       margin: 0;
     }
-
     h1 {
       text-align: center;
       color: #ffffff;
       text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
     }
-
     form {
       max-width: 500px;
       margin: auto;
@@ -28,13 +26,11 @@
       border-radius: 10px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     }
-
     label {
       display: block;
       margin: 15px 0 5px;
       color: #fff;
     }
-
     input, select, textarea {
       width: 100%;
       padding: 10px;
@@ -42,7 +38,6 @@
       border: none;
       border-radius: 6px;
     }
-
     button {
       background: #8e2de2;
       color: white;
@@ -51,11 +46,9 @@
       border-radius: 6px;
       cursor: pointer;
     }
-
     button:hover {
       background: #4a00e0;
     }
-
     .back-link {
       display: block;
       text-align: center;
@@ -63,14 +56,12 @@
       color: #ffffff;
       text-decoration: none;
     }
-
     .map-button {
       display: inline-block;
       margin-bottom: 10px;
       color: #8e2de2;
       text-decoration: underline;
     }
-
     #loading-overlay {
       display: none;
       position: fixed;
@@ -83,7 +74,6 @@
       justify-content: center;
       align-items: center;
     }
-
     .loader {
       width: 60px;
       height: 60px;
@@ -93,12 +83,10 @@
       animation: spin 1s linear infinite, scratch 0.3s infinite alternate;
       box-shadow: 0 0 8px #fff, inset 0 0 10px #fff;
     }
-
     @keyframes spin {
       0% { transform: rotate(0deg); }
       100% { transform: rotate(360deg); }
     }
-
     @keyframes scratch {
       0% { box-shadow: 0 0 8px #fff, inset 0 0 5px #fff; }
       100% { box-shadow: 0 0 12px #fff, inset 0 0 15px #fff; }
@@ -108,8 +96,8 @@
   <!-- EmailJS -->
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
-    (function(){
-      emailjs.init("B4S4CAw3KzrJg_6Mr"); // Public key
+    (function() {
+      emailjs.init("B4S4CAw3KzrJg_6Mr"); // Your public key
     })();
   </script>
 </head>
@@ -168,7 +156,7 @@
 
   <a href="index.html" class="back-link">← Back to Home</a>
 
-  <!-- Loader Overlay -->
+  <!-- Loader -->
   <div id="loading-overlay">
     <div class="loader"></div>
   </div>
@@ -191,19 +179,19 @@
 
     function showLoadingMessage() {
       document.getElementById('loading-overlay').style.display = 'flex';
-      const form = document.getElementById('bookingForm');
-      Array.from(form.elements).forEach(el => el.disabled = true);
+      document.getElementById('bookingForm').querySelectorAll("input, select, textarea, button")
+        .forEach(el => el.disabled = true);
     }
 
     function sendEmail(event) {
       event.preventDefault();
       showLoadingMessage();
 
-      emailjs.sendForm('service_ctisr1e', 'ejs-test-mail-service', event.target)
+      emailjs.sendForm('service_ctisr1e', '_ejs-test-mail-service_', event.target)
         .then(() => {
           window.location.href = 'thankyou.html';
         }, (error) => {
-          alert('Failed to send email: ' + error.text);
+          alert('Error sending email: ' + error.text);
           document.getElementById('loading-overlay').style.display = 'none';
         });
     }
