--- a/index.html
+++ b/index.html
@@ -151,6 +151,23 @@
     <button class="menu-toggle" id="menuToggle" onclick="toggleMenu()">☰</button>
     <h1>Owethu Mbuli</h1>
   </header>
+  <!-- Thank You Popup -->
+<div id="thankYouPopup" style="
+  display: none;
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #4CAF50;
+  color: white;
+  padding: 16px 24px;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+  font-family: 'Segoe UI', sans-serif;
+  z-index: 9999;
+">
+  ✅ Thank you! Your booking has been submitted.
+</div>
 
 
  <nav id="dropdown-menu">
