--- a/booking.html
+++ b/booking.html
@@ -13,13 +13,11 @@
       padding: 20px;
       margin: 0;
     }
-
     h1 {
       text-align: center;
       color: #ffffff;
       text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
     }
-
     form {
       max-width: 500px;
       margin: auto;
@@ -28,13 +26,11 @@
       border-radius: 10px;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     }
-
     label {
       display: block;
       margin: 15px 0 5px;
       color: #fff;
     }
-
     input, select, textarea {
       width: 100%;
       padding: 10px;
@@ -42,7 +38,6 @@
       border: none;
       border-radius: 6px;
     }
-
     button {
       background: #8e2de2;
       color: white;
@@ -51,11 +46,9 @@
       border-radius: 6px;
       cursor: pointer;
     }
-
     button:hover {
       background: #4a00e0;
     }
-
     .back-link {
       display: block;
       text-align: center;
@@ -63,23 +56,55 @@
       color: #ffffff;
       text-decoration: none;
     }
-
     .map-button {
       display: inline-block;
       margin-bottom: 10px;
       color: #8e2de2;
       text-decoration: underline;
     }
+    #loading-overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.85);
+      z-index: 9999;
+      justify-content: center;
+      align-items: center;
+    }
+    .loader {
+      width: 60px;
+      height: 60px;
+      border: 6px solid #ffffff;
+      border-top: 6px solid transparent;
+      border-radius: 50%;
+      animation: spin 1s linear infinite, scratch 0.3s infinite alternate;
+      box-shadow: 0 0 8px #fff, inset 0 0 10px #fff;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+    @keyframes scratch {
+      0% { box-shadow: 0 0 8px #fff, inset 0 0 5px #fff; }
+      100% { box-shadow: 0 0 12px #fff, inset 0 0 15px #fff; }
+    }
   </style>
+
+  <!-- EmailJS -->
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script>
+    (function() {
+      emailjs.init("B4S4CAw3KzrJg_6Mr"); // Your public key
+    })();
+  </script>
 </head>
 <body>
   <h1>Book Your Haircut</h1>
 
-  <form action="https://formsubmit.co/owethuandrew10@gmail.com" method="POST">
-    <!-- Hidden settings -->
-    <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_next" value="index.html">
-
+  <form id="bookingForm" onsubmit="sendEmail(event)">
     <label for="name">Full Name:</label>
     <input type="text" id="name" name="name" required>
 
@@ -115,6 +140,7 @@
         📍 Open Google Maps to Select Location
       </a>
     </p>
+    <button type="button" onclick="getLocation()">📍 Use My Current Location</button>
     <input type="url" id="location" name="location" placeholder="Paste your Google Maps location URL here" required>
 
     <label for="message">Message (Optional):</label>
@@ -129,5 +155,46 @@
   </form>
 
   <a href="index.html" class="back-link">← Back to Home</a>
+
+  <!-- Loader -->
+  <div id="loading-overlay">
+    <div class="loader"></div>
+  </div>
+
+  <script>
+    function getLocation() {
+      if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(function(position) {
+          const lat = position.coords.latitude;
+          const lon = position.coords.longitude;
+          const mapsLink = `https://www.google.com/maps?q=${lat},${lon}`;
+          document.getElementById('location').value = mapsLink;
+        }, function(error) {
+          alert("Unable to retrieve your location. Please allow access and try again.");
+        });
+      } else {
+        alert("Geolocation is not supported by your browser.");
+      }
+    }
+
+    function showLoadingMessage() {
+      document.getElementById('loading-overlay').style.display = 'flex';
+      document.getElementById('bookingForm').querySelectorAll("input, select, textarea, button")
+        .forEach(el => el.disabled = true);
+    }
+
+    function sendEmail(event) {
+      event.preventDefault();
+      showLoadingMessage();
+
+      emailjs.sendForm('service_ctisr1e', '_ejs-test-mail-service_', event.target)
+        .then(() => {
+          window.location.href = 'thankyou.html';
+        }, (error) => {
+          alert('Error sending email: ' + error.text);
+          document.getElementById('loading-overlay').style.display = 'none';
+        });
+    }
+  </script>
 </body>
 </html>
