--- a/thankyou.html
+++ b/thankyou.html
@@ -1,48 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Thank You!</title>
+  <meta charset="UTF-8">
+  <title>Thank You</title>
+  <meta http-equiv="refresh" content="3;url=index.html">
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #1e1e2f;
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      margin: 0;
+      background: rgba(0, 0, 0, 0.75);
       height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    .popup {
+      background: #222;
+      color: #fff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 25px rgba(0, 255, 0, 0.4);
       text-align: center;
-      padding: 20px;
+      max-width: 400px;
+      animation: fadeIn 0.6s ease-in-out;
     }
-    h1 {
-      font-size: 2em;
-      margin-bottom: 10px;
+
+    .popup h1 {
+      margin: 0 0 10px;
+      font-size: 24px;
     }
-    p {
-      font-size: 1.2em;
+
+    .popup p {
+      font-size: 16px;
+      color: #aaa;
     }
-    a {
-      color: #8e2de2;
-      text-decoration: none;
-      margin-top: 20px;
-      display: inline-block;
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
     }
   </style>
-  <script>
-    // Redirect to index.html after 3 seconds
-    setTimeout(function() {
-      window.location.href = "index.html";
-    }, 3000);
-  </script>
 </head>
 <body>
-  <div>
-    <h1>Thank You!</h1>
-    <p>Your booking has been received. We'll get back to you shortly.</p>
-    <p>Redirecting to home...</p>
-    <a href="index.html">← Click here if not redirected</a>
+  <div class="popup">
+    <h1>✅ Thank You!</h1>
+    <p>Your booking was received.<br>You’ll be redirected to the homepage shortly...</p>
   </div>
 </body>
 </html>
